# src/validators/authValidator.ts
@@ -1,0 +1,112 @@
+import { body, ValidationChain } from 'express-validator';
+
+export const signupValidator: ValidationChain[] = [
+  body('name')
+    .notEmpty()
+    .withMessage('Name is required')
+    .isString()
+    .withMessage('Name must be a string')
+    .trim(),
+  body('email')
+    .notEmpty()
+    .withMessage('Email is required')
+    .isEmail()
+    .withMessage('Email is invalid')
+    .normalizeEmail(),
+  body('password')
+    .notEmpty()
+    .withMessage('Password is required')
+    .isLength({ min: 8 })
+    .withMessage('Password must be at least 8 characters long'),
+];
+
+export const getUserVerificationOtpValidator: ValidationChain[] = [
+  body('email')
+    .notEmpty()
+    .withMessage('Email is required')
+    .isEmail()
+    .withMessage('Email is invalid')
+    .normalizeEmail(),
+];
+
+export const verifyAccountValidator: ValidationChain[] = [
+  body('email')
+    .notEmpty()
+    .withMessage('Email is required')
+    .isEmail()
+    .withMessage('Email is invalid')
+    .normalizeEmail(),
+  body('otp')
+    .notEmpty()
+    .withMessage('OTP is required')
+    .isString()
+    .withMessage('OTP must be a string'),
+];
+
+export const signinValidator: ValidationChain[] = [
+  body('email')
+    .notEmpty()
+    .withMessage('Email is required')
+    .isEmail()
+    .withMessage('Email is invalid')
+    .normalizeEmail(),
+  body('password')
+    .notEmpty()
+    .withMessage('Password is required')
+    .isLength({ min: 8 })
+    .withMessage('Password must be at least 8 characters long'),
+];
+
+export const forgotPasswordValidator: ValidationChain[] = [
+  body('email')
+    .notEmpty()
+    .withMessage('Email is required')
+    .isEmail()
+    .withMessage('Email is invalid')
+    .normalizeEmail(),
+];
+
+export const verifyForgotPasswordValidator: ValidationChain[] = [
+  body('email')
+    .notEmpty()
+    .withMessage('Email is required')
+    .isEmail()
+    .withMessage('Email is invalid')
+    .normalizeEmail(),
+  body('otp')
+    .notEmpty()
+    .withMessage('OTP is required')
+    .isString()
+    .withMessage('OTP must be a string'),
+];
+
+export const resetPasswordValidator: ValidationChain[] = [
+  body('email')
+    .notEmpty()
+    .withMessage('Email is required')
+    .isEmail()
+    .withMessage('Email is invalid')
+    .normalizeEmail(),
+  body('password')
+    .notEmpty()
+    .withMessage('Password is required')
+    .isLength({ min: 8 })
+    .withMessage('Password must be at least 8 characters long'),
+  body('otp')
+    .notEmpty()
+    .withMessage('OTP is required')
+    .isString()
+    .withMessage('OTP must be a string'),
+];
+
+export const updatePasswordValidator: ValidationChain[] = [
+  body('current_password')
+    .notEmpty()
+    .withMessage('Current password is required'),
+  body('password')
+    .notEmpty()
+    .withMessage('New password is required')
+    .isLength({ min: 8 })
+    .withMessage('Password must be at least 8 characters long'),
+];
+
